# stbsds

./: .gitignore  README.md  meson.build  setup_meson.sh  update_repo.py
include/: sds.h  stb_sprintf.h  stbsds.h
patchs/: sds.patch  stb_sprintf.patch
src/: stbsds.c
tests/: meson.build  tsprintf.cpp
